<resources>
    <!-- Recipes -->
    <string name="recipe_name">Name of Recipe</string>
    <string name="recipe_link">Recipe Link</string>
    <string name="recipe_rating">Recipe Rating</string>
    <string name="recipe_notes">Recipe Notes</string>
    <string name="save">Save</string>
    <string name="view_saved">View saved recipes</string>

    <!-- Converter -->
    <string name="app_name">MyRecipes</string>
    <string name="convert_to_grams_txt">Convert to grams</string>
    <string name="cups_txt">cups</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredient_quantity">Number of</string>

    <!-- BELOW NOT USED since static implementation in xml via VM -->
    <string name="x_cups_to_x_grams">%.2f cups to %.2f grams</string>
    <string name="invalid_input">Invalid value. Try again.</string>

    <!-- Save Recipe Fragment -->
    <string name="delete_button">Delete button</string>
    <string name="link">Link:</string>
    <string name="notes">Notes:</string>
    <string name="rating">Rating:</string>
    <string name="name">Name:</string>

    <!-- Ingredients for Converter Spinner -->
    <string-array name="ingredients">
        <item>Flour</item>
        <item>Sugar</item>
        <item>Butter</item>
        <item>Milk</item>
    </string-array>


</resources>