<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/recipe_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:hint="@string/recipe_name"
        android:minHeight="48dp"
        android:padding="4dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/recipe_link"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/recipe_link"
        android:minHeight="48dp"
        android:padding="4dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="@id/recipe_name"
        app:layout_constraintTop_toBottomOf="@id/recipe_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/recipe_rating"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/recipe_rating"
        android:minHeight="48dp"
        android:padding="4dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="@id/recipe_link"
        app:layout_constraintTop_toBottomOf="@id/recipe_link" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/recipe_notes"
        android:layout_width="200dp"
        android:layout_height="400dp"
        android:layout_marginTop="10dp"
        android:hint="@string/recipe_notes"
        android:minHeight="48dp"
        android:padding="4dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="@id/recipe_rating"
        app:layout_constraintTop_toBottomOf="@id/recipe_rating" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/recipe_notes"
        app:layout_constraintStart_toEndOf="@id/recipe_notes"
        android:layout_marginTop="50dp" />

</androidx.constraintlayout.widget.ConstraintLayout>