<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="converterViewModel"
            type="com.example.myrecipes.converter.ConverterViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".converter.ConverterFragment">

            <!-- TODO: Implement a border (using style?) -->
            <Spinner
                android:id="@+id/ingredient_spinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="42dp"
                android:minHeight="48dp"
                android:padding="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/ingredients"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cups_input"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:hint="@string/ingredient_quantity"
                android:minHeight="48dp"
                android:padding="4dp"
                android:textColorHint="#757575"
                app:layout_constraintStart_toStartOf="@id/ingredient_spinner"
                app:layout_constraintTop_toBottomOf="@id/ingredient_spinner" />

            <TextView
                android:id="@+id/cups_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/cups_input"
                app:layout_constraintTop_toTopOf="@id/cups_input"
                app:layout_constraintBottom_toBottomOf="@id/cups_input"
                android:layout_marginStart="4dp"
                android:padding="4dp"
                android:text="@string/cups_txt"/>

            <Button
                android:id="@+id/conversion_button"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/convert_to_grams_txt"
                app:layout_constraintTop_toBottomOf="@id/cups_text"
                app:layout_constraintStart_toEndOf="@id/cups_text"
                android:layout_marginTop="50dp"/>

            <TextView
                android:id="@+id/display_converted_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/conversion_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="100dp"
                tools:text="@{converterViewModel.conversionString}"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
